Revision history for Alien-Judy

...
        Re-assert that Dist::Zilla will keep src/judy-1.0.5/doc/man/man3/.keep
        Manually mkdir src/judy-1.0.5/doc/man/man3

0.25    Tue Jan 18, 2011
        Ignore $Config{make} and $Config{gmake} because they're not actually
          useful. Look for GNU make more directly.
        Fix documentation for inc_dirs and lib_dirs.
        Build with Dist::Zilla

0.24    Fri Jan 14, 2011
        Remove DynaLoader check for Judy1Test. Needed? It was
        accidentally committed before.


0.23    Fri Jan 14, 2011
        Load libJudy.so.1 for OpenSolaris

0.22    ???

0.21    ???

0.20    Mon Jun 28
        Try to find gmake if it's available

0.19    Tue Jun 22 (during the TPF auction)
        Fold both configure_requires and build_requires up to requires
        Require Sub::Exporter for configuration

0.18    Thu Jun 17 08:20:00 2010 -0700
        Add dl_load_libjudy function
        use warnings
        use Sub::Exporter

0.17    Mon Jun 14 00:44:44 2010 -0700
        Use y_n instead of prompt
        Annotate core requirements by the version of perl they appear in
        Depend on ExtUtils::Liblist, not ExtUtils::LibList

0.16    Thu Jun 10 22:19:03 2010 -0700
        Find *.h and *.so in @INC/Alien/Judy too

0.15    Thu Jun 10 11:34:35 2010 -0700
        Glob for libJudy.so because naming conventions differ between platforms

0.14    Thu Jun 10 10:46:13 2010 -0700
        Re-add missing src/judy-1.0.5/examples/Makefile
        Absolute paths in .gitignore so my src/judy-1.0.5/examples/Makefile will stop being dropped
        Cleaning
        Declare a bunch of missing configure_requires stuff
        Install Judy.h and libJudy.h to blib/arch/Alien/Judy to make some CPAN smokers happier
        Alien::Judy declares dynamic_config
        MYMETA.yml is a distribution artifact
        Be 5.005 safer
        MYMETA.yml is a distribution artifact
        Auto-generate README

0.13    Tue Jun 8 09:34:28 2010 -0700