@@ -3,6 +3,7 @@ Revision history for Alien-Judy
 ...
         Re-assert that Dist::Zilla will keep src/judy-1.0.5/doc/man/man3/.keep
         Manually mkdir src/judy-1.0.5/doc/man/man3
+        Remove tabs from Build.PL
 
 0.25    Tue Jan 18, 2011
         Ignore $Config{make} and $Config{gmake} because they're not actually
